# tree-sitter-taskwarrior

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-taskwarrior.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: 01_assignment_basic.txt  02_assignment_whitespace.txt  03_assignment_blank_value.txt  04_key_hyphenated_segment.txt  05_key_leading_underscore.txt  06_key_dotted_path.txt  07_value_embedded_whitespace.txt  08_value_utf8.txt  09_value_json_unicode_escape.txt  10_value_path_literal.txt  11_value_default_command.txt  12_value_filter_expression.txt  13_value_sort_expression.txt  14_value_report_columns.txt  15_value_trailing_comma_blank_member.txt  16_include_basic.txt  17_include_whitespace.txt  18_include_relative_path.txt  19_include_absolute_path.txt  20_include_home_path.txt  21_include_env_path.txt  22_include_distributed_file.txt  23_comment_full_line.txt  24_comment_inline_after_blank_assignment.txt  25_comment_inline_after_assignment.txt  26_comment_inline_after_include.txt  27_comment_immediate_hash.txt  28_comment_commented_include.txt  29_blank_lines_between_entries.txt  30_context_current.txt  31_context_read.txt  32_context_write.txt  33_context_rc_override.txt  34_report_labels.txt  35_report_dateformat.txt  36_uda_type.txt  37_uda_label.txt  (+13 more)
(+6 files in other folders)
