[package]
name = "tree-sitter-taskwarrior"
description = "Tree-sitter grammar for Taskwarrior configuration files (taskrc)"
version = "0.1.0"
authors = ["SOV710 <chris916911179@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "taskwarrior"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/sov710/tree-sitter-taskwarrior"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
